--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre8</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -111,12 +118,11 @@
                     <source>1.7</source>
                     <target>1.7</target>
                     <fork>true</fork>
-                    <executable>C:\Program Files\Java\jdk1.8.0_251\bin\javac</executable>
+                    <executable>C:\Program Files\Java\jdk-14\bin\javac</executable>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
